--- a/dockerlab.yml
+++ b/dockerlab.yml
@@ -6,7 +6,7 @@ services:
     deploy:
       replicas: 3
       placement:
-        constraints: [node.role != manager]
+        constraints: [ node.role == worker ]
     volumes:
      - nginx_vol:/usr/share/nginx/html
     ports:
