--- a/dockerlab.yml
+++ b/dockerlab.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   nginx:
-    image: nginx:1.0
+    image: 211.183.3.200:5000/nginx:1.0
     deploy:
       replicas: 3
       placement:
